# artifacts/api-server/src/routes/index.ts
@@ -1,8 +1,12 @@
 import { Router, type IRouter } from "express";
 import healthRouter from "./health";
+import episodesRouter from "./episodes";
+import youtubeRouter from "./youtube";
 
 const router: IRouter = Router();
 
 router.use(healthRouter);
+router.use(episodesRouter);
+router.use(youtubeRouter);
 
 export default router;
